[Task] Controller Support for V12

--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -3,7 +3,8 @@
     xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
     data-namespace-typo3-fluid="true">
 
+            <f:render section="Content" arguments="{_all}" optional="true" />
 
-    <f:render section="Content" />
+
 
 </html>
