--- a/Resources/Private/Backend/Partials/BackendTabs/frontend.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/frontend.html
@@ -9,7 +9,21 @@
     </div>
     <div class="row">
         <div class="col col-sm-12 col-md-12 col-xl-8">
-            <f:format.raw>{cookieFrontendTableHTML}</f:format.raw>
+
+            <f:be.tableList tableName="tx_cfcookiemanager_domain_model_cookiefrontend"
+                            storagePid="{storageUID}"
+                            levels="0"
+                            filter=""
+                            recordsPerPage="50"
+                            sortField="sorting"
+                            sortDescending="true"
+                            readOnly="false"
+                            enableClickMenu="true"
+                            enableControlPanels="true"
+                            clickTitleMode="edit"
+            />
+
+
         </div>
         <div class="col col-sm-12 col-md-12 col-xl-4">
             <div class="alert alert-info">
