[Task] Fixed CSS

--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -5,7 +5,9 @@
    margin: 0 !important;
   }
 }
-
+.module .cf_manager{
+  height: 90vh;
+}
 .actionbar{
   display: flex;
   justify-content: flex-end;
