--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -6,6 +6,10 @@
   margin: 0 !important;
 }
 
+.module .cf_manager {
+  height: 90vh;
+}
+
 .actionbar {
   display: flex;
   justify-content: flex-end;
