[TASK] Moved Template files

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -5,7 +5,7 @@
 
 <f:layout name="Default"/>
 
-<f:section name="Content">
+<f:section name="content">
     <div class="module-body t3js-module-body cf_manager">
         <f:if condition="{noselection}">
             <div class="alert alert-info">
