[TASK] Removed TODO and added footer for Backend Module

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -20,7 +20,6 @@
             </div>
 
         </f:if>
-
         <f:if condition="{firstInstall}">
             <f:then>
                 <h2>Welcome to CodingFreaks Cookie Manager</h2>
@@ -72,6 +71,9 @@
 
                         </div>
                     </div>
+                </div>
+                <div class="cf-footer">
+                        powered by <a href="https://coding-freaks.com" target="_blank">CodingFreaks</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Sitemap.html" target="_blank">CookieManager Documentation</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/ChangeLog/Index.html" target="_blank">Changelog</a>
                 </div>
             </f:else>
         </f:if>
