--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="cf-footer">
-                        powered by <a href="https://coding-freaks.com" target="_blank">CodingFreaks</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Sitemap.html" target="_blank">CookieManager Documentation</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/ChangeLog/Index.html" target="_blank">Changelog</a>
+                    powered by <a href="https://coding-freaks.com" target="_blank">CodingFreaks</a>  |  <a href="https://typo3.slack.com/archives/C04NB2ZP30U"><strong>Questions?</strong> Join the Typo3 Slack Channel #ext-cfcookiemanager</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Sitemap.html" target="_blank">CookieManager Documentation</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/ChangeLog/Index.html" target="_blank">Changelog</a>
                 </div>
             </f:else>
         </f:if>
