[TASK] Language Support for Autoconfiguration overview / New RenderUtility logic

--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -45,10 +45,6 @@
         </f:if>
 
 
-            <p>TODO: Autoconfiguraten for Scans, make new backend Action - Get Scan Result as JSon, make a HTML Strukture with ul,li in the LI make Categories and Services as the Optin should be linke the HOME TAb, action button, override,merge,ignore
-                Press Imprte and Create Struktre in DB and refresh the page
-            </p>
-
 
             <br>
             <p class="description">
@@ -94,7 +90,8 @@
                                 </f:if>
                             </f:for>
                         </div>
-                        <f:form.button type="submit">Import Selection</f:form.button>
+                        <br>
+                        <f:form.button class="btn btn-default" type="submit">Import selected configuration</f:form.button>
                     </f:form>
 
                 </f:then>
