--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -78,3 +78,20 @@ table.dataTable{
     }
   }
 }
+
+.loadingcontainer{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 500px;
+  margin: 0 auto;
+  .spinner-border{
+
+    margin: 0 auto;
+  }
+
+  .text{
+    text-align: center;
+    font-size: 28px;
+  }
+}
