[TASK] Added Scanner Link to Infobox

--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -203,8 +203,9 @@
                     </div>
                     <div class="media-body"><p class="alert-message"><strong>Auto Configuration</strong><br>
                         Auto Configuration are responsible for identifying Services used on your website.<br><br>
-                        Please note that the output of this tool may not be completely accurate. It is intended to assist with analyzing a website's cookie behavior and should not be relied on as the sole source of information.<br>
                         <br>Use it as a starting point for your analysis.
+                        <a  target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/AutoConfiguration/Index.html">Autoconfiguration Docs</a>
+                        <a  target="_blank" href="https://cookieapi.coding-freaks.com/scan">CodingFreaks Cookie API & Scanner</a>
                     </p>
                     </div>
                 </div>
